initial major commit, including basic arduino > pc communication protocol

--- a/packages/custom/arduino/bower.json
+++ b/packages/custom/arduino/bower.json
@@ -1,5 +1,7 @@
 {
   "name": "arduino",
   "version": "0.0.1",
-  "dependencies": {}
+  "dependencies": {
+    "angularjs-scroll-glue-Luegg": "~2.0.3"
+  }
 }
