--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,10 @@
     "angular-route": "latest",
     "bootstrap": "3.1.1",
     "angular-bootstrap": "0.11.0",
-    "angular-ui-router": "#master"
+    "angular-ui-router": "#master",
+    "angular-ui": "~0.4.0",
+    "angular-ui-slider": "~0.0.2",
+    "angular-ui-select": "~0.9.0",
+    "angular-sanitize": "~1.3.4"
   }
 }
